@@ -15,7 +15,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclStrToD.c,v 1.1.2.19 2005/08/11 16:29:24 dgp Exp $
+ * RCS: @(#) $Id: tclStrToD.c,v 1.1.2.20 2005/08/17 20:49:55 kennykb Exp $
  *
  *----------------------------------------------------------------------
  */
@@ -214,7 +214,7 @@ static double SafeLdExp _ANSI_ARGS_(( double fraction, int exponent ));
  * number begins within the string.  (The default is the start of
  * objPtr's string rep, which will be constructed if necessary.)
  *
- * If 'strPtr' is not supplied, 'objPtr' may be NULL.  In this case,
+ * If 'strPtr' is supplied, 'objPtr' may be NULL.  In this case,
  * no internal representation will be generated; instead, the routine
  * will simply check for a syntactically correct number, returning
  * TCL_OK or TCL_ERROR as appropriate, and setting *endPtrPtr if
